Added repository class and DTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ project.image=images/
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
+spring.app.jwtExpirationMs=30000000000000
+spring.app.jwtSecret=tywegdcxmngdsxujnsxzks7ihvbyguhkjllmnvkvjkbnoiuuttdfb
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.ecommerce.project=DEBUG
