--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=sb-ecom
-server.port=8000
+server.port=8090
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
 
@@ -14,3 +14,5 @@ logging.level.org.springframework=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.ecommerce.project=DEBUG
+
+spring.ecom.app.jwtCookie=springcookiename
